--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
-
+    <!--Servlet生命周期-->
     <servlet>
         <servlet-name>MServlet</servlet-name>
         <servlet-class>com.demo.cookie.MServlet</servlet-class>
@@ -49,6 +49,14 @@
     <servlet-mapping>
         <servlet-name>ChooseBookServlet</servlet-name>
         <url-pattern>/chooseBookServlet</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>ClearCookiesServlet</servlet-name>
+        <servlet-class>com.demo.cookie.ClearCookiesServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ClearCookiesServlet</servlet-name>
+        <url-pattern>/clearBooks</url-pattern>
     </servlet-mapping>
     <servlet>
         <servlet-name>SessionServlet</servlet-name>
